--- a/Graduation Project/appsettings.json
+++ b/Graduation Project/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-O88QSPP;Database=ITI_Gr_Project;Trusted_Connection=True;TrustServerCertificate=True;"
+
+  }
 }
