--- a/Graduation Project.BLL/Graduation Project.BLL.csproj
+++ b/Graduation Project.BLL/Graduation Project.BLL.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Graduation Project.DAl\Graduation Project.DAl.csproj" />
   </ItemGroup>
 
